Add student add to class functionality

--- a/css/general.css
+++ b/css/general.css
@@ -10,6 +10,7 @@ Classes
 .class-edit,
 .class-duplicate,
 .class-delete,
-.student-delete {
+.student-delete,
+.student-add {
     cursor: pointer;
 }
