--- a/css/general.css
+++ b/css/general.css
@@ -14,7 +14,9 @@ Classes
 .student-add,
 .list-delete,
 .vocab-edit,
-.vocab-delete {
+.vocab-delete,
+.list-activate,
+.list-deactivate {
     cursor: pointer;
 }
 
@@ -45,4 +47,16 @@ Vocabulary List
     width: 50%;
     padding: 0;
     border: unset;
+}
+
+.list-activate {
+    color: #00c123;
+}
+
+.list-deactivate {
+    color: #ff9000;
+}
+
+.list-deactivated {
+    color: #999999;
 }
