--- a/css/general.css
+++ b/css/general.css
@@ -71,3 +71,22 @@ Lets vocheck tool
 .vocheck_second_language {
     margin-top: 2rem;
 }
+
+/*
+Statistic View student
+*/
+.voc_num_unseen {
+    color: darkorange;
+}
+
+.voc_num_incorrect {
+    color: red;
+}
+
+.voc_num_correct {
+    color: green;
+}
+
+.list_deactivated {
+    color: darkgrey;
+}
